// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`golden seeds > D01 est stable 1`] = `
[
  {
    "answers": [
      "3x^{2} - 6x + 6",
    ],
    "statement": "Dériver la fonction suivante.",
  },
  {
    "answers": [
      "6x^{2} - 6x - 4",
    ],
    "statement": "Dériver la fonction suivante.",
  },
  {
    "answers": [
      "-6x",
    ],
    "statement": "Dériver la fonction suivante.",
  },
]
`;

exports[`golden seeds > D02 est stable 1`] = `
[
  {
    "answers": [
      "-15x^{2} - \\frac{6}{x^{2}}",
    ],
    "statement": "Dériver la fonction suivante.",
  },
  {
    "answers": [
      "-3x^{2} - \\frac{5}{x^{2}}",
    ],
    "statement": "Dériver la fonction suivante.",
  },
  {
    "answers": [
      "10x - \\frac{4}{x^{2}}",
    ],
    "statement": "Dériver la fonction suivante.",
  },
]
`;

exports[`golden seeds > D03 est stable 1`] = `
[
  {
    "answers": [
      "-8x + \\frac{1}{\\sqrt{x}}",
    ],
    "statement": "Dériver la fonction suivante.",
  },
  {
    "answers": [
      "6x + \\frac{1}{2\\sqrt{x}}",
    ],
    "statement": "Dériver la fonction suivante.",
  },
  {
    "answers": [
      "8x - \\frac{3}{2\\sqrt{x}}",
    ],
    "statement": "Dériver la fonction suivante.",
  },
]
`;

exports[`golden seeds > D04 est stable 1`] = `
[
  {
    "answers": [
      "9x^{2} - 20x - 27",
    ],
    "statement": "Dériver la fonction suivante.",
  },
  {
    "answers": [
      "6x^{2} - 6",
    ],
    "statement": "Dériver la fonction suivante.",
  },
  {
    "answers": [
      "-12x^{2} + 32x - 11",
    ],
    "statement": "Dériver la fonction suivante.",
  },
]
`;

exports[`golden seeds > D05 est stable 1`] = `
[
  {
    "answers": [
      "\\frac{14}{(x + 4)^{2}}",
    ],
    "statement": "Dériver la fonction suivante.",
  },
  {
    "answers": [
      "-\\frac{2}{x^{2}}",
    ],
    "statement": "Dériver la fonction suivante.",
  },
  {
    "answers": [
      "\\frac{16}{(-2x + 8)^{2}}",
    ],
    "statement": "Dériver la fonction suivante.",
  },
]
`;

exports[`golden seeds > D06 est stable 1`] = `
[
  {
    "answers": [
      "\\frac{-3x^{2} + 6x - 6}{(x - 1)^{2}}",
    ],
    "statement": "Dériver la fonction suivante.",
  },
  {
    "answers": [
      "\\frac{2x^{2} - 4x + 1}{(x - 1)^{2}}",
    ],
    "statement": "Dériver la fonction suivante.",
  },
  {
    "answers": [
      "\\frac{3x^{2} + 12x + 10}{(x + 2)^{2}}",
    ],
    "statement": "Dériver la fonction suivante.",
  },
]
`;

exports[`golden seeds > D07 est stable 1`] = `
[
  {
    "answers": [
      "(x - 5)\\mathrm{e}^{x}",
    ],
    "statement": "Dériver la fonction suivante.",
  },
  {
    "answers": [
      "x\\mathrm{e}^{x}",
    ],
    "statement": "Dériver la fonction suivante.",
  },
  {
    "answers": [
      "(-3x + 3)\\mathrm{e}^{x}",
    ],
    "statement": "Dériver la fonction suivante.",
  },
]
`;

exports[`golden seeds > D08 est stable 1`] = `
[
  {
    "answers": [
      "\\ln(x) + \\frac{x - 6}{x}",
    ],
    "statement": "Dériver la fonction suivante.",
  },
  {
    "answers": [
      "\\ln(x) + \\frac{x - 1}{x}",
    ],
    "statement": "Dériver la fonction suivante.",
  },
  {
    "answers": [
      "-3\\ln(x) + \\frac{-3x + 6}{x}",
    ],
    "statement": "Dériver la fonction suivante.",
  },
]
`;

exports[`golden seeds > D09 est stable 1`] = `
[
  {
    "answers": [
      "\\frac{-12x - 6}{(x^{2} + x + 1)^{2}}",
    ],
    "statement": "Dériver la fonction suivante.",
  },
  {
    "answers": [
      "\\frac{-10x - 5}{(x^{2} + x + 3)^{2}}",
    ],
    "statement": "Dériver la fonction suivante.",
  },
  {
    "answers": [
      "\\frac{-8x + 8}{(x^{2} - 2x + 6)^{2}}",
    ],
    "statement": "Dériver la fonction suivante.",
  },
]
`;

exports[`golden seeds > D10 est stable 1`] = `
[
  {
    "answers": [
      "4\\mathrm{e}^{4x + 5}",
    ],
    "statement": "Dériver la fonction suivante.",
  },
  {
    "answers": [
      "3\\mathrm{e}^{3x + 2}",
    ],
    "statement": "Dériver la fonction suivante.",
  },
  {
    "answers": [
      "(-4x + 6)\\mathrm{e}^{x^{2} - 3x}",
    ],
    "statement": "Dériver la fonction suivante.",
  },
]
`;

exports[`golden seeds > D11 est stable 1`] = `
[
  {
    "answers": [
      "\\frac{2x}{x^{2} + 1}",
    ],
    "statement": "Dériver la fonction suivante.",
  },
  {
    "answers": [
      "\\frac{2x}{x^{2} + 5}",
    ],
    "statement": "Dériver la fonction suivante.",
  },
  {
    "answers": [
      "\\frac{5}{5x - 15}",
    ],
    "statement": "Dériver la fonction suivante.",
  },
]
`;

exports[`golden seeds > D12 est stable 1`] = `
[
  {
    "answers": [
      "\\frac{2}{\\sqrt{4x + 16}}",
    ],
    "statement": "Dériver la fonction suivante.",
  },
  {
    "answers": [
      "\\frac{2}{\\sqrt{4x}}",
    ],
    "statement": "Dériver la fonction suivante.",
  },
  {
    "answers": [
      "\\frac{1}{\\sqrt{2x - 8}}",
    ],
    "statement": "Dériver la fonction suivante.",
  },
]
`;

exports[`golden seeds > D13 est stable 1`] = `
[
  {
    "answers": [
      "-16(-4x + 5)^{3}",
    ],
    "statement": "Dériver la fonction suivante.",
  },
  {
    "answers": [
      "12(3x + 2)^{3}",
    ],
    "statement": "Dériver la fonction suivante.",
  },
  {
    "answers": [
      "12(4x + 3)^{2}",
    ],
    "statement": "Dériver la fonction suivante.",
  },
]
`;

exports[`golden seeds > D14 est stable 1`] = `
[
  {
    "answers": [
      "(-x + 6)\\mathrm{e}^{-x + 3}",
    ],
    "statement": "Dériver la fonction suivante.",
  },
  {
    "answers": [
      "(3x - 2)\\mathrm{e}^{3x + 1}",
    ],
    "statement": "Dériver la fonction suivante.",
  },
  {
    "answers": [
      "(-4x + 8)\\mathrm{e}^{2x - 2}",
    ],
    "statement": "Dériver la fonction suivante.",
  },
]
`;

exports[`golden seeds > D15 est stable 1`] = `
[
  {
    "answers": [
      "\\frac{(-3x + 6)\\mathrm{e}^{x}}{(x - 1)^{2}}",
    ],
    "statement": "Dériver la fonction suivante.",
  },
  {
    "answers": [
      "\\frac{(-x + 2)\\mathrm{e}^{x}}{(x - 1)^{2}}",
    ],
    "statement": "Dériver la fonction suivante.",
  },
  {
    "answers": [
      "\\frac{(3x + 3)\\mathrm{e}^{x}}{(x + 2)^{2}}",
    ],
    "statement": "Dériver la fonction suivante.",
  },
]
`;

exports[`golden seeds > D16 est stable 1`] = `
[
  {
    "answers": [
      "\\frac{-\\ln(x) + 6}{x^{2}}",
    ],
    "statement": "Dériver la fonction suivante.",
  },
  {
    "answers": [
      "\\frac{-\\ln(x) + 2}{x^{2}}",
    ],
    "statement": "Dériver la fonction suivante.",
  },
  {
    "answers": [
      "\\frac{2\\ln(x) - 7}{x^{2}}",
    ],
    "statement": "Dériver la fonction suivante.",
  },
]
`;

exports[`golden seeds > D17 est stable 1`] = `
[
  {
    "answers": [
      "14(-3x^{2} + 4x - 3)(x^{3} - 2x^{2} + 3x)^{6}",
    ],
    "statement": "Dériver la fonction suivante.",
  },
  {
    "answers": [
      "28(-3x^{2} + 1)(-x^{3} + x)^{6}",
    ],
    "statement": "Dériver la fonction suivante.",
  },
  {
    "answers": [
      "24(2x + 1)(2x^{2} + 2x)^{11}",
    ],
    "statement": "Dériver la fonction suivante.",
  },
]
`;

exports[`golden seeds > D18 est stable 1`] = `
[
  {
    "answers": [
      "\\frac{4x}{\\sqrt{x^{2} + 4}}",
    ],
    "statement": "Dériver la fonction suivante.",
  },
  {
    "answers": [
      "\\frac{6x}{\\sqrt{2x^{2} + 6}}",
    ],
    "statement": "Dériver la fonction suivante.",
  },
  {
    "answers": [
      "\\frac{x}{\\sqrt{x^{2} + 6}}",
    ],
    "statement": "Dériver la fonction suivante.",
  },
]
`;

exports[`golden seeds > D19 est stable 1`] = `
[
  {
    "answers": [
      "\\frac{15x^{2} - 48x}{2\\sqrt{3x - 12}}",
    ],
    "statement": "Dériver la fonction suivante.",
  },
  {
    "answers": [
      "\\frac{10x^{2} - 24x}{\\sqrt{4x - 12}}",
    ],
    "statement": "Dériver la fonction suivante.",
  },
  {
    "answers": [
      "\\frac{3x - 2}{\\sqrt{x - 1}}",
    ],
    "statement": "Dériver la fonction suivante.",
  },
]
`;

exports[`golden seeds > D20 est stable 1`] = `
[
  {
    "answers": [
      "-16x - 8",
    ],
    "statement": "Dériver la fonction suivante.",
  },
  {
    "answers": [
      "-18x - 15",
    ],
    "statement": "Dériver la fonction suivante.",
  },
  {
    "answers": [
      "-48x - 72",
    ],
    "statement": "Dériver la fonction suivante.",
  },
]
`;

exports[`golden seeds > D21 est stable 1`] = `
[
  {
    "answers": [
      "-\\frac{1}{(x - 6)^{2}}",
    ],
    "statement": "Dériver la fonction suivante.",
  },
  {
    "answers": [
      "-\\frac{1}{(x - 1)^{2}}",
    ],
    "statement": "Dériver la fonction suivante.",
  },
  {
    "answers": [
      "-\\frac{6}{x^{2}}",
    ],
    "statement": "Dériver la fonction suivante.",
  },
]
`;

exports[`golden seeds > D22 est stable 1`] = `
[
  {
    "answers": [
      "\\frac{-5x^{2} - 12x + 5}{(x^{2} + 1)^{2}}",
    ],
    "statement": "Dériver la fonction suivante.",
  },
  {
    "answers": [
      "\\frac{-4x^{2} - 4x + 12}{(x^{2} + 3)^{2}}",
    ],
    "statement": "Dériver la fonction suivante.",
  },
  {
    "answers": [
      "-\\frac{8x}{(x^{2} + 6)^{2}}",
    ],
    "statement": "Dériver la fonction suivante.",
  },
]
`;

exports[`golden seeds > D23 est stable 1`] = `
[
  {
    "answers": [
      "\\frac{-x + 2}{x^{2} \\sqrt{6x - 6}}",
    ],
    "statement": "Dériver la fonction suivante.",
  },
  {
    "answers": [
      "\\frac{-x + 4}{2x^{2} \\sqrt{5x - 10}}",
    ],
    "statement": "Dériver la fonction suivante.",
  },
  {
    "answers": [
      "\\frac{-3x + 18}{8x^{2} \\sqrt{3x - 9}}",
    ],
    "statement": "Dériver la fonction suivante.",
  },
]
`;

exports[`golden seeds > L01 est stable 1`] = `
[
  {
    "answers": [
      "{"kind":"infinity","sign":-1}",
    ],
    "statement": "Déterminer la limite suivante.",
  },
  {
    "answers": [
      "{"kind":"infinity","sign":-1}",
    ],
    "statement": "Déterminer la limite suivante.",
  },
  {
    "answers": [
      "{"kind":"infinity","sign":-1}",
    ],
    "statement": "Déterminer la limite suivante.",
  },
]
`;

exports[`golden seeds > L02 est stable 1`] = `
[
  {
    "answers": [
      ""0"",
    ],
    "statement": "Déterminer la limite suivante.",
  },
  {
    "answers": [
      ""5"",
    ],
    "statement": "Déterminer la limite suivante.",
  },
  {
    "answers": [
      ""6"",
    ],
    "statement": "Déterminer la limite suivante.",
  },
]
`;

exports[`golden seeds > L03 est stable 1`] = `
[
  {
    "answers": [
      ""-\\\\frac{59}{3}"",
    ],
    "statement": "Déterminer la limite suivante.",
  },
  {
    "answers": [
      ""4"",
    ],
    "statement": "Déterminer la limite suivante.",
  },
  {
    "answers": [
      ""\\\\frac{19}{4}"",
    ],
    "statement": "Déterminer la limite suivante.",
  },
]
`;

exports[`golden seeds > L04 est stable 1`] = `
[
  {
    "answers": [
      "{"kind":"infinity","sign":-1}",
    ],
    "statement": "Déterminer la limite suivante.",
  },
  {
    "answers": [
      "{"kind":"infinity","sign":-1}",
    ],
    "statement": "Déterminer la limite suivante.",
  },
  {
    "answers": [
      ""\\\\frac{1}{2}"",
    ],
    "statement": "Déterminer la limite suivante.",
  },
]
`;

exports[`golden seeds > L05 est stable 1`] = `
[
  {
    "answers": [
      "{"kind":"infinity","sign":1}",
      "{"kind":"infinity","sign":-1}",
    ],
    "statement": "Déterminer les limites suivantes.",
  },
  {
    "answers": [
      "{"kind":"infinity","sign":-1}",
      "{"kind":"infinity","sign":1}",
    ],
    "statement": "Déterminer les limites suivantes.",
  },
  {
    "answers": [
      "{"kind":"infinity","sign":1}",
      "{"kind":"infinity","sign":-1}",
    ],
    "statement": "Déterminer les limites suivantes.",
  },
]
`;

exports[`golden seeds > L06 est stable 1`] = `
[
  {
    "answers": [
      ""18"",
    ],
    "statement": "Déterminer la limite suivante.",
  },
  {
    "answers": [
      ""4"",
    ],
    "statement": "Déterminer la limite suivante.",
  },
  {
    "answers": [
      ""-14"",
    ],
    "statement": "Déterminer la limite suivante.",
  },
]
`;

exports[`golden seeds > L07 est stable 1`] = `
[
  {
    "answers": [
      ""1"",
    ],
    "statement": "Déterminer la limite suivante.",
  },
  {
    "answers": [
      ""\\\\frac{1}{2}"",
    ],
    "statement": "Déterminer la limite suivante.",
  },
  {
    "answers": [
      ""-\\\\frac{3}{2}"",
    ],
    "statement": "Déterminer la limite suivante.",
  },
]
`;

exports[`golden seeds > L08 est stable 1`] = `
[
  {
    "answers": [
      ""0"",
    ],
    "statement": "Déterminer la limite suivante.",
  },
  {
    "answers": [
      "{"kind":"infinity","sign":1}",
    ],
    "statement": "Déterminer la limite suivante.",
  },
  {
    "answers": [
      ""0"",
    ],
    "statement": "Déterminer la limite suivante.",
  },
]
`;

exports[`golden seeds > L09 est stable 1`] = `
[
  {
    "answers": [
      ""3"",
    ],
    "statement": "Déterminer la limite suivante.",
  },
  {
    "answers": [
      ""3"",
    ],
    "statement": "Déterminer la limite suivante.",
  },
  {
    "answers": [
      ""-1"",
    ],
    "statement": "Déterminer la limite suivante.",
  },
]
`;

exports[`golden seeds > L10 est stable 1`] = `
[
  {
    "answers": [
      ""\\\\ln(2)"",
    ],
    "statement": "Déterminer la limite suivante.",
  },
  {
    "answers": [
      ""\\\\ln(4)"",
    ],
    "statement": "Déterminer la limite suivante.",
  },
  {
    "answers": [
      ""\\\\mathrm{e}^{4}"",
    ],
    "statement": "Déterminer la limite suivante.",
  },
]
`;

exports[`golden seeds > L11 est stable 1`] = `
[
  {
    "answers": [
      "{"kind":"infinity","sign":-1}",
    ],
    "statement": "Déterminer la limite suivante.",
  },
  {
    "answers": [
      "{"kind":"infinity","sign":-1}",
    ],
    "statement": "Déterminer la limite suivante.",
  },
  {
    "answers": [
      "{"kind":"infinity","sign":-1}",
    ],
    "statement": "Déterminer la limite suivante.",
  },
]
`;

exports[`golden seeds > L12 est stable 1`] = `
[
  {
    "answers": [
      "{"kind":"infinity","sign":1}",
    ],
    "statement": "Déterminer la limite suivante.",
  },
  {
    "answers": [
      "{"kind":"infinity","sign":1}",
    ],
    "statement": "Déterminer la limite suivante.",
  },
  {
    "answers": [
      ""0"",
    ],
    "statement": "Déterminer la limite suivante.",
  },
]
`;

exports[`golden seeds > V01 est stable 1`] = `
[
  {
    "answers": [
      "8",
      "-+,0,",
    ],
    "statement": "Étudier le signe de la fonction $f$ définie sur $\\mathbb{R}$ par $f(x) = x - 8$.",
  },
  {
    "answers": [
      "1",
      "-+,0,",
    ],
    "statement": "Étudier le signe de la fonction $f$ définie sur $\\mathbb{R}$ par $f(x) = x - 1$.",
  },
  {
    "answers": [
      "\\frac{8}{3}",
      "+-,0,",
    ],
    "statement": "Étudier le signe de la fonction $f$ définie sur $\\mathbb{R}$ par $f(x) = -3x + 8$.",
  },
]
`;

exports[`golden seeds > V02 est stable 1`] = `
[
  {
    "answers": [
      "",
      "+,",
    ],
    "statement": "Étudier le signe de $f(x) = x^{2} + 6$ sur $\\mathbb{R}$.",
  },
  {
    "answers": [
      "3;5",
      "+-+,0,0,",
    ],
    "statement": "Étudier le signe de $f(x) = x^{2} - 8x + 15$ sur $\\mathbb{R}$.",
  },
  {
    "answers": [
      "2;3",
      "-+-,0,0,",
    ],
    "statement": "Étudier le signe de $f(x) = -2x^{2} + 10x - 12$ sur $\\mathbb{R}$.",
  },
]
`;

exports[`golden seeds > V03 est stable 1`] = `
[
  {
    "answers": [
      "2x + 8",
      "-+,0,|down,up",
      ""-16"",
    ],
    "statement": "Dresser le tableau de variations de $f(x) = x^{2} + 8x$ sur $\\mathbb{R}$.",
  },
  {
    "answers": [
      "2x",
      "-+,0,|down,up",
      ""5"",
    ],
    "statement": "Dresser le tableau de variations de $f(x) = x^{2} + 5$ sur $\\mathbb{R}$.",
  },
  {
    "answers": [
      "-4x + 16",
      "+-,0,|up,down",
      ""36"",
    ],
    "statement": "Dresser le tableau de variations de $f(x) = -2x^{2} + 16x + 4$ sur $\\mathbb{R}$.",
  },
]
`;

exports[`golden seeds > V04 est stable 1`] = `
[
  {
    "answers": [
      "-2;5",
      "++-,,0,|-++,0,,|-+-,0,0,",
    ],
    "statement": "Étudier le signe de $f(x) = (-3x + 15)(3x + 6)$ sur $\\mathbb{R}$.",
  },
  {
    "answers": [
      "-4;0",
      "-++,0,,|--+,,0,|+-+,0,0,",
    ],
    "statement": "Étudier le signe de $f(x) = (2x + 8)x$ sur $\\mathbb{R}$.",
  },
  {
    "answers": [
      "-3;-2",
      "-++,0,,|--+,,||,|+-+,0,||,",
    ],
    "statement": "Étudier le signe de $f(x) = \\frac{3x + 9}{2x + 4}$ sur $\\mathbb{R} \\setminus \\{-2\\}$.",
  },
]
`;

exports[`golden seeds > V05 est stable 1`] = `
[
  {
    "answers": [
      "-6x^{2} + 18x - 12",
      "1;2",
      "-+-,0,0,|down,up,down",
    ],
    "statement": "Dresser le tableau de variations de $f(x) = -2x^{3} + 9x^{2} - 12x + 5$ sur $\\mathbb{R}$.",
  },
  {
    "answers": [
      "6x^{2} - 12x",
      "0;2",
      "+-+,0,0,|up,down,up",
    ],
    "statement": "Dresser le tableau de variations de $f(x) = 2x^{3} - 6x^{2} + 2$ sur $\\mathbb{R}$.",
  },
  {
    "answers": [
      "6x^{2} - 12x - 48",
      "-2;4",
      "+-+,0,0,|up,down,up",
    ],
    "statement": "Dresser le tableau de variations de $f(x) = 2x^{3} - 6x^{2} - 48x - 3$ sur $\\mathbb{R}$.",
  },
]
`;

exports[`golden seeds > V06 est stable 1`] = `
[
  {
    "answers": [
      "\\frac{14}{(x + 4)^{2}}",
      "++,||,|up,up",
    ],
    "statement": "Dresser le tableau de variations de $f(x) = \\frac{5x + 6}{x + 4}$ sur $\\mathbb{R} \\setminus \\{-4\\}$.",
  },
  {
    "answers": [
      "-\\frac{2}{x^{2}}",
      "--,||,|down,down",
    ],
    "statement": "Dresser le tableau de variations de $f(x) = \\frac{4x + 2}{x}$ sur $\\mathbb{R} \\setminus \\{0\\}$.",
  },
  {
    "answers": [
      "\\frac{16}{(-2x + 8)^{2}}",
      "++,||,|up,up",
    ],
    "statement": "Dresser le tableau de variations de $f(x) = \\frac{3x - 4}{-2x + 8}$ sur $\\mathbb{R} \\setminus \\{4\\}$.",
  },
]
`;

exports[`golden seeds > V07 est stable 1`] = `
[
  {
    "answers": [
      "(x + 3)\\mathrm{e}^{x}",
      "-+,0,|++,,|-+,0,|down,up",
      ""-\\\\mathrm{e}^{-3}"",
    ],
    "statement": "Étudier les variations de $f(x) = (x + 2)\\mathrm{e}^{x}$ sur $\\mathbb{R}$, limites comprises.",
  },
  {
    "answers": [
      "x\\mathrm{e}^{x}",
      "-+,0,|++,,|-+,0,|down,up",
      ""-1"",
    ],
    "statement": "Étudier les variations de $f(x) = (x - 1)\\mathrm{e}^{x}$ sur $\\mathbb{R}$, limites comprises.",
  },
  {
    "answers": [
      "(-2x + 6)\\mathrm{e}^{x}",
      "+-,0,|++,,|+-,0,|up,down",
      ""2\\\\mathrm{e}^{3}"",
    ],
    "statement": "Étudier les variations de $f(x) = (-2x + 8)\\mathrm{e}^{x}$ sur $\\mathbb{R}$, limites comprises.",
  },
]
`;

exports[`golden seeds > V08 est stable 1`] = `
[
  {
    "answers": [
      "\\frac{x - 4}{x}",
      "-+,0,|++,,|-+,0,|down,up",
      ""-4\\\\ln(4)"",
    ],
    "statement": "Étudier les variations de $f(x) = x - 4\\ln(x) - 4$ sur $]0\\,;\\,+\\infty[$, limites comprises.",
  },
  {
    "answers": [
      "\\frac{x - 4}{x}",
      "-+,0,|++,,|-+,0,|down,up",
      ""-4\\\\ln(4) + 4"",
    ],
    "statement": "Étudier les variations de $f(x) = x - 4\\ln(x)$ sur $]0\\,;\\,+\\infty[$, limites comprises.",
  },
  {
    "answers": [
      "\\frac{x - 2}{x}",
      "-+,0,|++,,|-+,0,|down,up",
      ""-2\\\\ln(2) + 6"",
    ],
    "statement": "Étudier les variations de $f(x) = x - 2\\ln(x) + 4$ sur $]0\\,;\\,+\\infty[$, limites comprises.",
  },
]
`;

exports[`golden seeds > V09 est stable 1`] = `
[
  {
    "answers": [
      "\\mathrm{e}^{x} - 4",
      "\\ln(4)",
      "-+,0,|down,up",
      ""-4\\\\ln(4)"",
    ],
    "statement": "Étudier les variations de $f(x) = \\mathrm{e}^{x} - 4x - 4$ sur $\\mathbb{R}$, limites comprises.",
  },
  {
    "answers": [
      "\\mathrm{e}^{x} - 4",
      "\\ln(4)",
      "-+,0,|down,up",
      ""-4\\\\ln(4) + 4"",
    ],
    "statement": "Étudier les variations de $f(x) = \\mathrm{e}^{x} - 4x$ sur $\\mathbb{R}$, limites comprises.",
  },
  {
    "answers": [
      "\\mathrm{e}^{x} - 2",
      "\\ln(2)",
      "-+,0,|down,up",
      ""-2\\\\ln(2) + 6"",
    ],
    "statement": "Étudier les variations de $f(x) = \\mathrm{e}^{x} - 2x + 4$ sur $\\mathbb{R}$, limites comprises.",
  },
]
`;

exports[`golden seeds > V10 est stable 1`] = `
[
  {
    "answers": [
      "-2;3",
      "-+-,0,0,",
    ],
    "statement": "On donne ci-dessous la courbe représentative $\\mathcal{C}_f$ d'une fonction $f$ définie sur $[-3\\,;\\,7]$.",
  },
  {
    "answers": [
      "-1;3",
      "+-+,0,0,",
    ],
    "statement": "On donne ci-dessous la courbe représentative $\\mathcal{C}_f$ d'une fonction $f$ définie sur $[-3\\,;\\,4]$.",
  },
  {
    "answers": [
      "0",
      "+-,0,",
    ],
    "statement": "On donne ci-dessous la courbe représentative $\\mathcal{C}_f$ d'une fonction $f$ définie sur $[-4\\,;\\,5]$.",
  },
]
`;

exports[`golden seeds > V11 est stable 1`] = `
[
  {
    "answers": [
      "up,down,up",
      ""1"",
    ],
    "statement": "On donne ci-dessous la courbe représentative $\\mathcal{C}_f$ d'une fonction $f$ définie sur $[-4\\,;\\,4]$.",
  },
  {
    "answers": [
      "up,down,up",
      ""-2"",
    ],
    "statement": "On donne ci-dessous la courbe représentative $\\mathcal{C}_f$ d'une fonction $f$ définie sur $[-4\\,;\\,6]$.",
  },
  {
    "answers": [
      "up,down",
      ""-2"",
    ],
    "statement": "On donne ci-dessous la courbe représentative $\\mathcal{C}_f$ d'une fonction $f$ définie sur $[-2\\,;\\,8]$.",
  },
]
`;

exports[`golden seeds > V12 est stable 1`] = `
[
  {
    "answers": [
      "+-+,0,0,|up,down,up",
      "-+,0,",
    ],
    "statement": "On donne ci-dessous la courbe représentative $\\mathcal{C}_f$ d'une fonction $f$ définie sur $[-4\\,;\\,4]$.",
  },
  {
    "answers": [
      "+-+,0,0,|up,down,up",
      "-+-+,0,0,0,",
    ],
    "statement": "On donne ci-dessous la courbe représentative $\\mathcal{C}_f$ d'une fonction $f$ définie sur $[-4\\,;\\,6]$.",
  },
  {
    "answers": [
      "+-,0,|up,down",
      "-+-,0,0,",
    ],
    "statement": "On donne ci-dessous la courbe représentative $\\mathcal{C}_f$ d'une fonction $f$ définie sur $[-2\\,;\\,8]$.",
  },
]
`;

exports[`golden seeds > V13 est stable 1`] = `
[
  {
    "answers": [
      ""1"",
      "{"kind":"infinity","sign":1}",
      "x\\mathrm{e}^{x}",
      "-+,0,|down,up",
      "++,0,",
    ],
    "statement": "On considère la fonction $\\begin{array}{rrcl} g : & \\mathbb{R} & \\longrightarrow & \\mathbb{R} \\\\ & x & \\longmapsto & (x - 1)\\mathrm{e}^{x} + 1 \\end{array}$",
  },
  {
    "answers": [
      ""1"",
      "{"kind":"infinity","sign":1}",
      "x\\mathrm{e}^{x}",
      "-+,0,|down,up",
      "++,0,",
    ],
    "statement": "On considère la fonction $\\begin{array}{rrcl} g : & \\mathbb{R} & \\longrightarrow & \\mathbb{R} \\\\ & x & \\longmapsto & (x - 1)\\mathrm{e}^{x} + 1 \\end{array}$",
  },
  {
    "answers": [
      "{"kind":"infinity","sign":1}",
      "{"kind":"infinity","sign":1}",
      "\\frac{x - 1}{x}",
      "-+,0,|down,up",
      "+,",
    ],
    "statement": "On considère la fonction $\\begin{array}{rrcl} g : & ]0\\,;\\,+\\infty[ & \\longrightarrow & \\mathbb{R} \\\\ & x & \\longmapsto & x - \\ln(x) + 3 \\end{array}$",
  },
]
`;

exports[`golden seeds > V14 est stable 1`] = `
[
  {
    "answers": [
      ""-1"",
      "-++-,0,||,0,|down,up,up,down",
      "+-,||,",
    ],
    "statement": "On donne ci-dessous la courbe représentative $\\mathcal{C}_f$ d'une fonction $f$ définie sur $[-5\\,;\\,3]$ sauf en une valeur.",
  },
  {
    "answers": [
      ""0"",
      "-++-,0,||,0,|down,up,up,down",
      "+-,||,",
    ],
    "statement": "On donne ci-dessous la courbe représentative $\\mathcal{C}_f$ d'une fonction $f$ définie sur $[-4\\,;\\,4]$ sauf en une valeur.",
  },
  {
    "answers": [
      ""-1"",
      "++,||,|up,up",
      "-+-,0,||,",
    ],
    "statement": "On donne ci-dessous la courbe représentative $\\mathcal{C}_f$ d'une fonction $f$ définie sur $[-4\\,;\\,0]$ sauf en une valeur.",
  },
]
`;
